# Nomos

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CORRECT_IMPLEMENTATION_PLAN.md  CORRECT_IMPLEMENTATION_PROGRESS.md  GEMINI.md  IMPLEMENTATION_STATUS.md  INSTALL.md  NOMOS_SUCCESS_REPORT.md  OPRF实现总结.md  README.md  REORGANIZATION_SUMMARY.md  SCHEME_COMPARISON.md  guide.md  test_qtree_debug.cpp  today.md  任务进度-2026-03-08.md  实验运行指南-ClientSearchFixedW1.md  实验运行指南-ClientSearchFixedW2.md  客户端搜索时间相似性分析.md
.claude/: settings.local.json
archive/nomos-old-implementation/: README.md
archive/nomos-old-implementation/include/: Gatekeeper.hpp  Server.hpp
archive/nomos-old-implementation/src/: Server.cpp
docs/: Benchmark-Plan.md  MC-ODXT-Design.md  OPRF-Implementation.md  OPRF实现总结.md  README.md  architecture.md  build-system.md  code-review-fixes-2026-02-28.md  crypto-protocols.md  experiment-validation.md  historical-design-archive.md  implementation-status.md  known-issues.md  mc-odxt-refactoring-2026-03-15.md  medium-priority-fixes-2026-02-28.md  paper-reproduction-setup.md  paper-sources.md  parameter-deviations.md  project-reorganization-2026-02-28.md  scheme-comparison.md  three-schemes-current-implementation.md
include/: nomos.h
include/benchmark/: BenchmarkExperiment.hpp  BenchmarkFramework.hpp  BenchmarkUtils.hpp  ClientSearchFixedW1Experiment.hpp  ClientSearchFixedW2Experiment.hpp  ComparativeBenchmark.hpp  ComparativeBenchmarkExperiment.hpp  DatasetLoader.hpp  ExperimentProgress.hpp  NomosBenchmark.hpp
include/core/: CpABE.hpp  Experiment.hpp  ExperimentFactory.hpp  Primitive.hpp
include/mc-odxt/: McOdxtClient.hpp  McOdxtExperiment.cpp  McOdxtExperiment.hpp  McOdxtGatekeeper.hpp  McOdxtProtocol.cpp  McOdxtServer.hpp  McOdxtTypes.hpp
include/nomos/: Client.hpp  ClientCorrect.hpp  Gatekeeper.hpp  GatekeeperCorrect.hpp  GatekeeperState.hpp  Nomos.hpp  NomosExperiment.hpp  NomosSimplifiedExperiment.hpp  Server.hpp  ServerCorrect.hpp  types.hpp  types_correct.hpp
include/nomos/core/: Primitive.hpp
include/verifiable/: AddressCommitment.hpp  MerkleOpen.hpp  QTree.hpp  VerifiableExperiment.hpp  VerifiableScheme.hpp
include/vq-nomos/: Client.hpp  Common.hpp  Gatekeeper.hpp  MerkleOpen.hpp  QTree.hpp  Server.hpp  VQNomosExperiment.hpp  types.hpp
pic/: client_search_time_fixed_w1.md  client_search_time_fixed_w2.md  search_time_fixed_w1.md  search_time_fixed_w2.md
results/: exp1_N100.csv  exp1_N1000.csv  exp1_N10000.csv  exp1_N500.csv  exp1_N5000.csv
results/2026-03-01/: benchmark_results.csv  benchmark_results.json  mcodxt_benchmark.csv  nomos_benchmark_runs.csv  nomos_full_benchmark.csv  nomos_scaling_test.csv
results/ch4/client_search_time_fixed_w1/: MC-ODXT_Crime.csv  MC-ODXT_Enron.csv  MC-ODXT_Wiki.csv  Nomos_Crime.csv  Nomos_Enron.csv  Nomos_Wiki.csv  VQNomos_Crime.csv  VQNomos_Enron.csv  VQNomos_Wiki.csv
results/ch4/client_search_time_fixed_w1_smoke/: MC-ODXT_Crime.csv  Nomos_Crime.csv  VQNomos_Crime.csv
results/ch4/client_search_time_fixed_w2/: MC-ODXT_Crime.csv  MC-ODXT_Enron.csv  MC-ODXT_Wiki.csv  Nomos_Crime.csv  Nomos_Enron.csv  Nomos_Random.csv  Nomos_Wiki.csv  VQNomos_Crime.csv  VQNomos_Enron.csv  VQNomos_Wiki.csv
results/ch4/server_search_time_fixed_w2/: MC-ODXT_Random.csv  VQNomos_Random.csv
rules/: README.md  编码流程.md  论文复现规则.md
scripts/: generate_experiment_data.sh  plot_results.py  plot_results_simple.py  run_ch4_client_search_time_fixed_w1.sh  run_ch4_search_time_fixed_w1.sh  run_ch4_search_time_fixed_w2.sh
src/: Gatekeeper.cpp  client.cpp  main.cpp  nomos.cpp  server.cpp
src/benchmark/: BenchmarkExperiment.cpp  BenchmarkFramework.cpp  BenchmarkUtils.cpp  ClientSearchFixedW1Experiment.cpp  ClientSearchFixedW2Experiment.cpp  ComparativeBenchmark.cpp  DatasetLoader.cpp  ExperimentProgress.cpp  NomosBenchmark.cpp
src/core/: CpABE.cpp  Primitive.cpp
src/mc-odxt/: McOdxtClient.cpp  McOdxtExperiment.cpp  McOdxtExperiment.hpp  McOdxtGatekeeper.cpp  McOdxtProtocol.cpp  McOdxtServer.cpp  McOdxtTypes.hpp
src/nomos/: Client.cpp  ClientCorrect.cpp  Gatekeeper.cpp  GatekeeperCorrect.cpp  GatekeeperState.cpp  NomosSimplifiedExperiment.cpp  Server.cpp  ServerCorrect.cpp
src/verifiable/: AddressCommitment.cpp  MerkleOpen.cpp  QTree.cpp
src/vq-nomos/: Client.cpp  Common.cpp  Gatekeeper.cpp  Server.cpp
tests/: CMakeLists.txt  README.md  client_search_time_smoke_test.cpp  cp_abe_test.cpp  experiment_progress_test.cpp  main_test.cpp  mc_odxt_test.cpp  nomos_simplified_test.cpp  nomos_test.cpp  oprf_test.cpp  primitive_test.cpp  qtree_test.cpp  relic_test.cpp  search_fixed_w1_smoke_test.cpp  three_scheme_correctness_test.cpp  vqnomos_test.cpp
